[package]
name = "rusty-bolt-stub"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"

[dependencies]
nom = "7.1.3"
nom-span = { version = "0.1.1", path = "nom-span" }
nom-supreme = "0.8.0"
anyhow = "1.0.97"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12" }
clap = { version = "4.5.16", features = ["derive"] }
chrono = "0.4.38"
itertools = "0.13.0"
chrono-tz = "0.10.0"
duplicate = "2.0.0"
indoc = "2.0.5"
serde = "1.0.217"
serde_json = { version = "1.0.137", features = ["default", "preserve_order"] }
regex = "1.11.1"
indexmap = "2.7.1"
usize_cast = "1.1.0"

[dev-dependencies]
rstest ="0.22.0"
