[package]
name = "rusty-bolt-stub"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"

[dependencies]
anyhow = "1.0.97"
chrono = "0.4.38"
chrono-tz = "0.10.0"
clap = { version = "4.5.16", features = ["derive"] }
fern= { version = "0.7.1" }
indexmap = "2.7.1"
indoc = "2.0.5"
itertools = "0.14.0"
log = "0.4.26"
nom = "7.1.3"
nom-span = "0.1.2"
regex = "1.11.1"
serde = "1.0.217"
serde_json = { version = "1.0.137", features = ["default", "preserve_order"] }
termcolor = "1.4.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = { version = "0.7.12" }
usize_cast = "1.1.0"

[dev-dependencies]
rstest = "0.25.0"
