[package]
name = "rusty-bolt-stub"
version = "0.1.0"
edition = "2021"
rust-version = "1.86.0"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.39"
chrono-tz = "0.10.3"
clap = { version = "4.5.36", features = ["derive"] }
fern= { version = "0.7.1" }
indexmap = "2.7.1"
indoc = "2.0.6"
itertools = "0.14.0"
log = "0.4.27"
nom = "7.1.3"
nom-span = "0.1.2"
pyo3 = "0.24.1"
regex = "1.11.1"
serde = "1.0.219"
serde_json = { version = "1.0.140", features = ["default", "preserve_order"] }
termcolor = "1.4.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
usize_cast = "1.1.0"

[dev-dependencies]
rstest = "0.25.0"
